Bug 1891040 Part 1: Add a mechanism to make CompositorBridgeChild use sync flush rendering. r=gfx-reviewers,nical

Now that we do sync flushes less often, this provides a way to
temporarily force all flushes to be sync in order to achieve smooth
visual effects.

Differential Revision: https://phabricator.services.mozilla.com/D209770