gfx/layers/ipc/CompositorBridgeChild.cpp
@@ -79,6 +79,7 @@ CompositorBridgeChild::CompositorBridgeChild(CompositorManagerChild* aManager)
       mCanSend(false),
       mActorDestroyed(false),
       mPaused(false),
+      mForceSyncFlushRendering(false),
       mThread(NS_GetCurrentThread()),
       mProcessToken(0),
       mSectionAllocator(nullptr) {
@@ -353,6 +354,22 @@ bool CompositorBridgeChild::SendFlushRendering(
     return false;
   }
   return PCompositorBridgeChild::SendFlushRendering(aReasons);
+}
+
+bool CompositorBridgeChild::SendFlushRenderingAsync(
+    const wr::RenderReasons& aReasons) {
+  if (mForceSyncFlushRendering) {
+    return SendFlushRendering(aReasons);
+  }
+  if (!mCanSend) {
+    return false;
+  }
+  return PCompositorBridgeChild::SendFlushRendering(aReasons);
+}
+
+void CompositorBridgeChild::SetForceSyncFlushRendering(
+    bool aForceSyncFlushRendering) {
+  mForceSyncFlushRendering = aForceSyncFlushRendering;
 }
 
 bool CompositorBridgeChild::SendStartFrameTimeRecording(
